<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" 

    android:background="#E8E8E8">

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/Reset_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp"
            android:text="@string/reset_password"/>
        
        <View
    		android:layout_width="fill_parent"
    		android:layout_height="1dp"
    		android:background="@android:color/darker_gray"/>
        
        <TextView
            android:id="@+id/Reset_Password_Msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp"
            android:text="@string/let_s_get_started_n_we_will_send_you_an_e_mail_on_how_to_change_your_password_"/>

        <EditText
            android:id="@+id/edit_reset_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_top_bg"
            android:padding="10dp"
            android:hint="@string/e_mail"
            android:textColorHint="#cccccc"
            android:drawableLeft="@drawable/user" >

            <requestFocus />
        </EditText>

        
        
        <Button 
               android:id="@+id/btnResetContinue"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:layout_margin="4dp"
               android:text="Continue"
               android:background="@drawable/button_default_bg"
           />
        
        <LinearLayout 
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
    		<TextView
                android:id="@+id/Reset_Msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textStyle="italic"
                android:clickable="true"
                android:textColorLink="#0000FF"/>
            
            
    
		</LinearLayout>
            

        </LinearLayout>

</RelativeLayout>