<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" 

    android:background="#E8E8E8">

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/UserNotFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_top_bg"
            android:padding="10dp"
            android:hint="@string/user_name_or_email"
            android:textColorHint="#cccccc"
            android:drawableLeft="@drawable/user" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:padding="10dp"
            android:password="true"
            android:textColorHint="#cccccc"
            tools:ignore="Deprecated" />

        <Button 
               android:id="@+id/btnSingIn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:layout_margin="4dp"
               android:text="@string/sign_in"
               android:background="@drawable/button_default_bg"
           />
       <!--  
        <LinearLayout 
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
    		<TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_" 
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="italic"
                android:clickable="true"
                android:textColor="#0000FF"/>
            <TextView
                android:id="@+id/needAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_an_account_" 
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="italic"
                android:clickable="true" 
                android:textColor="#0000FF"/>
                           
    
		</LinearLayout>
            
         -->

        </LinearLayout>

</RelativeLayout>